# evdi-rs

./: Cargo.toml  README.md
examples/: low_level_usage.rs  profile_basic_usage.rs
src/: buffer.rs  device.rs  device_config.rs  device_node.rs  events.rs  handle.rs  lib.rs  mode.rs  prelude.rs  test_common.rs
src/device_config/: edid.rs  mod.rs
