[package]
name = "evdi"
version = "0.6.0"
authors = ["Daniel Franklin <daniel@danielzfranklin.org>"]
edition = "2018"
license = "MIT"
description = "Safe bindings for evdi"
repository = "https://github.com/danielzfranklin/evdi-rs"
keywords = ["evdi", "displaylink", "bindings", "linux"]
categories = ["os::linux-apis", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdi-sys = "0.3.0"
drm-fourcc = "1.3.2"
regex = "1.4.3"
lazy_static = "1.4.0"
thiserror = "1.0.24"
rand = "0.8.3"
tokio = { version = "1.3.0", features = ["rt", "sync", "macros", "time", "net"] }

[dev-dependencies]
tokio-test = "0.4.1"
