[package]
name = "evdi"
version = "0.7.0"
authors = ["Daniel Franklin <daniel@danielzfranklin.org>"]
edition = "2018"
license = "MIT"
description = "Safe bindings for evdi"
repository = "https://github.com/danielzfranklin/evdi-rs"
keywords = ["evdi", "displaylink", "bindings", "linux"]
categories = ["os::linux-apis", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["serde_crate", "drm-fourcc/serde"]

[dependencies]
evdi-sys = "0.3.0"
drm-fourcc = "1.3.3"
regex = "1.4.3"
lazy_static = "1.4.0"
thiserror = "1.0.24"
rand = "0.8.3"
tokio = { version = "1.3.0", features = ["rt", "sync", "macros", "time", "net"] }
tracing = { version = "0.1.25", features = ["log"] }
libc = "0.2.88"
crossbeam-channel = "0.5.0"
derivative = "2.2.0"
#serde = {version = "1.0.125", features = ["derive"]}

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0.125"
features = ["derive"]

[dev-dependencies]
tokio-test = "0.4.1"
tokio = { version = "1.3.0", features = ["full"] }
use = "0.0.0"
test-env-log = { version = "0.2.6" }
env_logger = "0.8.3"
logtest = "2.0.0"
tracing-flame = "0.1.0"
tracing-subscriber = "0.2.17"
anyhow = "1.0.38"

[patch.crates-io]
# trace-pretty won't be upstreamed. Since this is only a test dependency, I don't expect that to be an issue
test-env-log = { git = "https://github.com/danielzfranklin/test-env-log", features = ["trace-pretty"] }
